Added trpc to react app, configed and setup api and funa db

--- a/apps/api.vibefire.app/tsconfig.json
+++ b/apps/api.vibefire.app/tsconfig.json
@@ -95,9 +95,6 @@
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
 	"include": [
-		"src",
-		"*.ts",
-		"**/*.js",
-		"index.tsx"
+		"src/**/*.ts",
 	],
 }
