--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@vibefire/eslint-config": "*",
-    "autoprefixer": "^10.4.14",
+    "@vibefire/config": "*",
     "eslint": "^8.40.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "eslint-config-custom": "*",
+    "jotai": "^2.1.1",
     "next": "^13.4.4",
-    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.9",
     "superjson": "^1.12.3",
     "tailwindcss": "^3.3.2",
     "turbo": "^1.9.8",
