--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@vibefire/config/tsconfig/ts-lib.json",
+  "extends": "@vibefire/config/tsconfig/ts-lib",
   "include": [
     "src/**/*.ts",
     "index.ts",
