--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,6 @@
     "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
-    "@vibefire/tsconfig": "*"
+    "@vibefire/config": "*"
   }
 }
