--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@vibefire/api-v1",
+  "name": "@vibefire/db",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "scripts": {},
   "dependencies": {
-    "@clerk/backend": "^0.23.0",
-    "@vibefire/db": "*"
+    "fauna": "^0.9.1"
   },
   "devDependencies": {
     "@vibefire/config": "*",
