--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -14,11 +14,10 @@
   },
   "include": [
     "expo-plugins",
-    "expo-env.d.ts",
     ".expo",
     "src",
     "*.ts",
     "**/*.js",
-    "index.tsx"
-  ],
+    "index.ts"
+  ]
 }
