--- a/packages/api/v1/tsconfig.json
+++ b/packages/api/v1/tsconfig.json
@@ -3,5 +3,14 @@
   "include": [
     "src/**/*.ts",
     "index.ts",
-  ]
+    "../../utils/src/h3/index.ts",
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    }
+  },
 }
