--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -16,41 +16,44 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.17.6",
+    "@clerk/clerk-expo": "^0.18.12",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@gorhom/bottom-sheet": "^4",
-    "expo": "~48.0.18",
-    "expo-auth-session": "^4.0.3",
-    "expo-constants": "~14.2.1",
-    "expo-font": "~11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-location": "~15.1.1",
-    "expo-router": "^1.2.0",
-    "expo-secure-store": "^12.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-web-browser": "^12.1.1",
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "expo": "~49.0.2",
+    "expo-auth-session": "^5.0.2",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "^2.4.6",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-location": "~16.0.0",
+    "expo-router": "^2.0.0",
+    "expo-secure-store": "^12.3.1",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "^12.3.2",
+    "jotai-trpc": "^0.5.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-maps": "1.3.2",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.12"
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.1",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
+    "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/runtime": "^7.21.5",
-    "@expo/config-plugins": "^6.0.1",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/runtime": "^7.22.6",
+    "@expo/config-plugins": "^7.2.5",
     "@tsconfig/react-native": "^3.0.2",
-    "@types/webpack-env": "^1.18.0",
-    "@vibefire/api-v1": "*",
-    "@vibefire/config": "*",
+    "@types/webpack-env": "^1.18.1",
+    "@vibefire/api-v1": "^0.1.0",
+    "@vibefire/config": "^0.1.0",
     "tailwindcss": "^3.3.2"
   },
   "resolutions": {
