--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -19,13 +19,13 @@
     "@clerk/clerk-expo": "^0.18.12",
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@vibefire/api": "*",
     "expo": "~49.0.2",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "^2.4.6",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-location": "~16.0.0",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.4",
@@ -52,8 +52,7 @@
     "@expo/config-plugins": "^7.2.5",
     "@tsconfig/react-native": "^3.0.2",
     "@types/webpack-env": "^1.18.1",
-    "@vibefire/api-v1": "^0.1.0",
-    "@vibefire/config": "^0.1.0",
+    "@vibefire/config": "*",
     "tailwindcss": "^3.3.2"
   },
   "resolutions": {
