--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,15 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "name": "@vibefire/api-v1",
+  "name": "@vibefire/api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@clerk/backend": "^0.23.0",
+    "@hono/zod-validator": "^0.1.3",
     "@vibefire/db": "*",
     "@vibefire/utils": "*"
   },
   "devDependencies": {
     "@vibefire/config": "*",
     "@vibefire/types": "*"
+  },
+  "exports": {
+    "./trpc": "./src/trpc/index.ts",
+    "./basepaths": "./basepaths.ts"
   }
 }
