--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "include": [
     "src/**/*.ts",
-    "index.ts",
-    "../../utils/src/h3/index.ts",
+    "basepaths.ts",
   ],
   "compilerOptions": {
     "baseUrl": ".",
