--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vibefire/config",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@types/eslint": "^8.37.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
