added models removed types

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@vibefire/config": "*",
-    "@vibefire/types": "*"
+    "@vibefire/models": "*"
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
