--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,10 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@clerk/backend": "^0.23.0",
+    "@clerk/backend": "^0.26.0",
     "@hono/zod-validator": "^0.1.3",
     "@vibefire/db": "*",
-    "@vibefire/utils": "*"
+    "@vibefire/utils": "*",
+    "svix": "^1.7.0"
   },
   "devDependencies": {
     "@vibefire/config": "*",
@@ -15,6 +16,7 @@
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
-    "./basepaths": "./basepaths.ts"
+    "./webhooks": "./src/webhooks/index.ts",
+    "./basepaths": "./src/basepaths.ts"
   }
 }
