--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "include": [
     "src/**/*.ts",
-    "basepaths.ts",
+    "src/basepaths.ts",
   ],
   "compilerOptions": {
     "baseUrl": ".",
