--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,15 +8,18 @@
     "@hono/zod-validator": "^0.1.3",
     "@vibefire/db": "*",
     "@vibefire/utils": "*",
+    "luxon": "^3.3.0",
     "svix": "^1.7.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.1",
     "@vibefire/config": "*",
     "@vibefire/models": "*"
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
     "./webhooks": "./src/webhooks/index.ts",
+    "./rest": "./src/rest/index.ts",
     "./basepaths": "./src/basepaths.ts"
   }
 }
