--- a/packages/shared-state/package.json
+++ b/packages/shared-state/package.json
@@ -2,7 +2,9 @@
   "name": "@vibefire/shared-state",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {},
   "devDependencies": {
-    "@vibefire/config": "*"
+    "@vibefire/config": "*",
+    "@vibefire/models": "*"
   }
 }
