--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.tsx",
   "scripts": {
-    "clean": "git clean -xdf .expo .turbo node_modules",
+    "clean": "git clean -xdf .expo .turbo nodeq_modules",
     "dev": "expo start",
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
@@ -19,7 +19,10 @@
     "@clerk/clerk-expo": "^0.18.12",
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@vibefire/api": "*",
+    "@vibefire/models": "*",
+    "@vibefire/shared-state": "*",
     "expo": "~49.0.2",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
@@ -31,7 +34,6 @@
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "^12.3.2",
-    "jotai-trpc": "^0.5.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,6 +44,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
