--- a/package.json
+++ b/package.json
@@ -20,36 +20,32 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^4.20230419.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.0.0",
-    "@manypkg/cli": "^0.20.0",
-    "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.27.1",
-    "@trpc/react-query": "^10.27.1",
-    "@trpc/server": "^10.27.1",
-    "@types/node": "^20.2.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@hono/trpc-server": "^0.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@manypkg/cli": "^0.21.0",
+    "@tanstack/react-query": "^4.32.0",
+    "@trpc/client": "^10.36.0",
+    "@trpc/react-query": "^10.36.0",
+    "@trpc/server": "^10.36.0",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
+    "@vibefire/config": "^0.1.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
-    "eslint-config-custom": "*",
-    "hono": "^3.3.3",
-    "jotai": "^2.1.1",
-    "next": "^13.4.4",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
+    "eslint": "^8.46.0",
+    "hono": "^3.3.4",
+    "jotai": "^2.2.2",
+    "next": "^13.4.12",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.9",
-    "superjson": "^1.12.3",
-    "tailwindcss": "^3.3.2",
-    "turbo": "^1.10.11",
-    "typescript": "^5.0.4",
-    "wrangler": "^3.0.0"
-  },
-  "devDependencies": {
-    "@vibefire/config": "*"
+    "react-error-boundary": "^4.0.10",
+    "superjson": "^1.13.1",
+    "tailwindcss": "^3.3.3",
+    "turbo": "^1.10.12",
+    "typescript": "^5.1.6",
+    "wrangler": "^3.4.0"
   }
 }
