started strucutuing stuff, added typebox models, added event card etc.

--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -8,6 +8,7 @@
       ]
     },
     "types": [
+      "@types/jest",
       "nativewind/types",
       "webpack-env"
     ]
@@ -19,5 +20,8 @@
     "*.ts",
     "**/*.js",
     "index.ts"
+  ],
+  "exclude": [
+    "*.test.ts"
   ]
 }
