--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -2,6 +2,9 @@
   "name": "@vibefire/models",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@vibefire/config": "*"
   }
