--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -27,11 +27,12 @@
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
+    "expo-image": "~1.3.2",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-secure-store": "^12.3.1",
-    "expo-splash-screen": "~0.20.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "^12.3.2",
     "nativewind": "^2.0.11",
@@ -57,13 +58,5 @@
     "@types/webpack-env": "^1.18.1",
     "@vibefire/config": "*",
     "tailwindcss": "^3.3.2"
-  },
-  "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
   }
 }
