--- a/package.json
+++ b/package.json
@@ -23,27 +23,33 @@
     "@hono/trpc-server": "^0.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@manypkg/cli": "^0.21.0",
-    "@tanstack/react-query": "^4.32.0",
-    "@trpc/client": "^10.36.0",
-    "@trpc/react-query": "^10.36.0",
-    "@trpc/server": "^10.36.0",
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.17",
+    "@sinclair/typebox": "^0.30.4",
+    "@tanstack/react-query": "^4.32.6",
+    "@trpc/client": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
+    "@types/jest": "^29.5.3",
+    "@types/luxon": "^3.3.1",
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vibefire/config": "^0.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
     "hono": "^3.3.4",
-    "jotai": "^2.2.2",
-    "next": "^13.4.12",
+    "jest": "^29.6.2",
+    "jotai": "^2.3.0",
+    "luxon": "^3.3.0",
+    "next": "^13.4.13",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "superjson": "^1.13.1",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "turbo": "^1.10.12",
     "typescript": "^5.1.6",
     "wrangler": "^3.4.0"
