--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -28,6 +28,7 @@
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
