Refactored with service-managers, begining to write API

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
+    "@clerk/backend": "^0.26.0",
     "@hono/trpc-server": "^0.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@manypkg/cli": "^0.21.0",
