--- a/packages/service-managers/tsconfig.json
+++ b/packages/service-managers/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "compilerOptions": {
+    "types": [
+      "@types/jest",
+    ],
     "baseUrl": ".",
     "paths": {
       "~/*": [
         "./src/*"
       ]
-    },
+    }
   },
   "include": [
-    "index.ts",
-    "src/**/*.ts"
+    "src/**/*.ts",
+  ],
+  "exclude": [
+    "*.test.ts"
   ],
 }
