--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -1,20 +1,14 @@
 {
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "compilerOptions": {
-    "types": [
-      "@types/jest",
-    ],
     "baseUrl": ".",
     "paths": {
       "~/*": [
         "./src/*"
       ]
-    }
+    },
   },
   "include": [
-    "src/**/*.ts",
-  ],
-  "exclude": [
-    "*.test.ts"
+    "src/**/*.ts"
   ],
 }
