--- a/packages/shared-state/tsconfig.json
+++ b/packages/shared-state/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "@vibefire/config/tsconfig/ts-lib",
+  "extends": "@vibefire/config/tsconfig/ts-lib.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    },
+  },
   "include": [
-    "src/**/*.ts",
     "index.ts",
-    "../../apps/app.vibefire.native/src/hooks/map-query.ts",
-  ]
+    "src/**/*.ts"
+  ],
 }
