--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "h3-js": "^4.1.0"
+    "h3-js": "^4.1.0",
+    "@vibefire/models": "*"
   },
   "devDependencies": {
     "@vibefire/config": "*"
