--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,6 +2,10 @@
   "name": "@vibefire/config",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "update": "pnpm update",
+    "update-latest": "pnpm update --latest"
+  },
   "dependencies": {
     "@types/eslint": "^8.37.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
