--- a/apps/api.vibefire.app/package.json
+++ b/apps/api.vibefire.app/package.json
@@ -10,7 +10,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^4.20230419.0",
-    "@vibefire/api": "*"
+    "@cloudflare/workers-types": "^4.20230821.0",
+    "@vibefire/api": "^0.1.0"
   }
 }
