--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -2,7 +2,7 @@
   "name": "app.vibefire.native",
   "version": "0.1.0",
   "private": true,
-  "main": "index.tsx",
+  "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo nodeq_modules",
     "dev": "expo start",
@@ -18,14 +18,14 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.18.12",
+    "@clerk/clerk-expo": "^0.18.17",
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.4.7",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
-    "@vibefire/api": "*",
-    "@vibefire/models": "*",
-    "@vibefire/shared-state": "*",
-    "expo": "~49.0.2",
+    "@vibefire/api": "^0.1.0",
+    "@vibefire/models": "^0.1.0",
+    "@vibefire/shared-state": "^0.1.0",
+    "expo": "~49.0.8",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
@@ -41,25 +41,25 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.1.6",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
+    "@babel/core": "^7.22.10",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/runtime": "^7.22.6",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/runtime": "^7.22.10",
     "@expo/config-plugins": "^7.2.5",
     "@tsconfig/react-native": "^3.0.2",
     "@types/webpack-env": "^1.18.1",
-    "@vibefire/config": "*",
-    "tailwindcss": "^3.3.2"
+    "@vibefire/config": "^0.1.0",
+    "tailwindcss": "3.3.2"
   }
 }
