--- a/apps/vibefire.app/package.json
+++ b/apps/vibefire.app/package.json
@@ -11,13 +11,13 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
-    "@headlessui/tailwindcss": "^0.1.3",
+    "@headlessui/react": "^1.7.17",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
-    "@tsconfig/next": "^1.0.5",
-    "@vibefire/config": "*",
-    "@vibefire/ui": "*"
+    "@tsconfig/next": "^2.0.0",
+    "@vibefire/config": "^0.1.0",
+    "@vibefire/ui": "^0.1.0"
   }
 }
