--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "turbo": "^1.10.12",
+    "type-fest": "^4.2.0",
     "typescript": "^5.1.6",
     "wrangler": "^3.5.1"
   }
