--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,14 +8,14 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@vibefire/models": "*",
-    "@vibefire/service-managers": "*",
-    "@vibefire/services": "*",
-    "@vibefire/utils": "*",
-    "svix": "^1.7.0"
+    "@vibefire/models": "^0.1.0",
+    "@vibefire/managers": "^0.1.0",
+    "@vibefire/services": "^0.1.0",
+    "@vibefire/utils": "^0.1.0",
+    "svix": "^1.8.1"
   },
   "devDependencies": {
-    "@vibefire/config": "*"
+    "@vibefire/config": "^0.1.0"
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
