--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {},
+    "update-latest": {},
     "dev": {
       "cache": false,
       "persistent": true
