--- a/.prettierrc
+++ b/.prettierrc
@@ -1,38 +1,34 @@
 {
-  "arrowParens":"always",
-  "printWidth":80,
-  "singleQuote":false,
-  "jsxSingleQuote":false,
-  "semi":true,
-  "trailingComma":"all",
-  "tabWidth":2,
-  "plugins":[
-     "@ianvs/prettier-plugin-sort-imports",
-     "prettier-plugin-tailwindcss"
+  "arrowParens": "always",
+  "printWidth": 80,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "semi": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "plugins": [
+    "@ianvs/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
   ],
-  "tailwindConfig":"./packages/config/tailwind",
-  "importOrder":[
-     "^(react/(.*)$)|^(react$)|^(react-native(.*)$)",
-     "^(next/(.*)$)|^(next$)",
-     "^(expo(.*)$)|^(expo$)",
-     "<THIRD_PARTY_MODULES>",
-     "",
-     "^@vibefire/(.*)$",
-     "",
-     "^~/utils/(.*)$",
-     "^~/components/(.*)$",
-     "^~/styles/(.*)$",
-     "^~/(.*)$",
-     "^[./]"
+  "tailwindConfig": "./packages/config/tailwind",
+  "importOrder": [
+    "^(react/(.*)$)|^(react$)|^(react-native(.*)$)",
+    "^(next/(.*)$)|^(next$)",
+    "^(expo(.*)$)|^(expo$)",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^@vibefire/(.*)$",
+    "",
+    "^~/utils/(.*)$",
+    "^~/components/(.*)$",
+    "^~/styles/(.*)$",
+    "^~/(.*)$",
+    "^[./]"
   ],
-  "importOrderSeparation":false,
-  "importOrderSortSpecifiers":true,
-  "importOrderBuiltinModulesToTop":true,
-  "importOrderParserPlugins":[
-     "typescript",
-     "jsx",
-     "decorators-legacy"
-  ],
-  "importOrderMergeDuplicateImports":true,
-  "importOrderCombineTypeAndValueImports":true
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true,
+  "importOrderBuiltinModulesToTop": true,
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderMergeDuplicateImports": true,
+  "importOrderCombineTypeAndValueImports": true
 }
