--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,8 +11,7 @@
     "@vibefire/models": "^0.1.0",
     "@vibefire/managers": "^0.1.0",
     "@vibefire/services": "^0.1.0",
-    "@vibefire/utils": "^0.1.0",
-    "svix": "^1.8.1"
+    "@vibefire/utils": "^0.1.0"
   },
   "devDependencies": {
     "@vibefire/config": "^0.1.0"
