--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -8,15 +8,17 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "@clerk/backend": "^0.27.0",
     "@googlemaps/google-maps-services-js": "^3.3.36",
     "@supabase/supabase-js": "^2.33.1",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
-    "@vibefire/models": "*",
-    "@vibefire/utils": "*",
-    "fauna": "^1.0.1"
+    "@vibefire/models": "^0.1.0",
+    "@vibefire/utils": "^0.1.0",
+    "fauna": "^1.1.0",
+    "svix": "^1.10.0"
   },
   "devDependencies": {
-    "@vibefire/config": "*"
+    "@vibefire/config": "^0.1.0"
   },
   "exports": {
     "./fauna": "./src/fauna/index.ts",
