--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "packageManager": "pnpm@8.5.1",
   "scripts": {
     "build": "turbo build",
-    "clean": "git clean -xdf node_modules",
+    "clean": "git clean -xdf node_modules */**/node_modules",
     "clean:workspaces": "turbo clean",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push db:generate",
@@ -23,36 +23,36 @@
     "@hono/trpc-server": "^0.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@manypkg/cli": "^0.21.0",
-    "@sinclair/typebox": "^0.31.1",
+    "@sinclair/typebox": "^0.31.8",
     "@tanstack/react-query": "^4.33.0",
-    "@trpc/client": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
-    "@types/jest": "^29.5.3",
-    "@types/luxon": "^3.3.1",
-    "@types/node": "^20.5.1",
-    "@types/react": "^18.2.20",
+    "@trpc/client": "^10.38.1",
+    "@trpc/react-query": "^10.38.1",
+    "@trpc/server": "^10.38.1",
+    "@types/jest": "^29.5.4",
+    "@types/luxon": "^3.3.2",
+    "@types/node": "^20.5.7",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vibefire/config": "^0.1.0",
     "autoprefixer": "^10.4.15",
-    "eslint": "^8.47.0",
-    "hono": "^3.4.3",
-    "jest": "^29.6.2",
-    "jotai": "^2.3.1",
-    "luxon": "^3.4.0",
+    "eslint": "^8.48.0",
+    "hono": "^3.5.6",
+    "jest": "^29.6.4",
+    "jotai": "^2.4.1",
+    "luxon": "^3.4.2",
     "next": "^13.4.19",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "superjson": "^1.13.1",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "turbo": "^1.10.12",
-    "type-fest": "^4.2.0",
-    "typescript": "^5.1.6",
-    "wrangler": "^3.5.1"
+    "turbo": "^1.10.13",
+    "type-fest": "^4.3.1",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.6.0"
   }
 }
