--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/react-query": "^10.38.1",
     "@trpc/server": "^10.38.1",
     "@types/jest": "^29.5.4",
+    "@types/lodash": "^4.14.197",
     "@types/luxon": "^3.3.2",
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
@@ -39,6 +40,7 @@
     "hono": "^3.5.6",
     "jest": "^29.6.4",
     "jotai": "^2.4.1",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.2",
     "next": "^13.4.19",
     "postcss": "^8.4.29",
