--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -25,13 +25,14 @@
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@vibefire/api": "^0.1.0",
     "@vibefire/models": "^0.1.0",
-    "@vibefire/utils": "^0.1.0",
     "@vibefire/shared-state": "^0.1.0",
+    "@vibefire/utils": "^0.1.0",
     "expo": "~49.0.8",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
-    "expo-image": "~1.3.2",
+    "expo-image": "~1.3.3",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
@@ -47,6 +48,7 @@
     "react-native-gesture-handler": "~2.12.1",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
