--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -31,7 +31,7 @@
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
-    "expo-image": "~1.3.3",
+    "expo-image": "~1.3.4",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
@@ -44,7 +44,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
@@ -53,6 +53,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
+    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.19.7"
   },
