--- a/apps/api.vibefire.app/package.json
+++ b/apps/api.vibefire.app/package.json
@@ -10,6 +10,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@vibefire/api": "^0.1.0"
+    "@vibefire/api": "^0.1.0",
+    "@vibefire/utils": "^0.1.0"
   }
 }
