--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -18,7 +18,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.19.3",
+    "@clerk/clerk-expo": "^0.19.14",
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-community/datetimepicker": "7.2.0",
@@ -30,6 +30,7 @@
     "expo": "~49.0.8",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.4",
     "expo-image-picker": "~14.3.2",
