--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"],
+  "globalEnv": [
+    "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+    "EXPO_PUBLIC_CF_IMAGES_ACC_HASH"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
