--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -22,15 +22,18 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@sentry/react-native": "5.5.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@vibefire/api": "^0.1.0",
     "@vibefire/models": "^0.1.0",
     "@vibefire/shared-state": "^0.1.0",
     "@vibefire/utils": "^0.1.0",
     "expo": "~49.0.8",
+    "expo-application": "~5.3.0",
     "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.4",
     "expo-image-picker": "~14.3.2",
@@ -56,7 +59,8 @@
     "react-native-svg": "13.9.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.1.6",
-    "react-native-web": "~0.19.7"
+    "react-native-web": "~0.19.7",
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
