--- a/apps/vifr.io/package.json
+++ b/apps/vifr.io/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@vibefire/api-worker",
-  "version": "0.1.0",
+  "name": "vifr.io",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "deploy": "wrangler publish",
+    "deploy": "wrangler deploy",
     "start": "wrangler dev",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
-  "dependencies": {
+  "devDependencies": {
     "@vibefire/api": "^0.1.0",
     "@vibefire/utils": "^0.1.0"
   }
