--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -49,8 +49,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-maps": "1.7.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.0",
