added uber integration

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
     "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
-    "EXPO_PUBLIC_CF_IMAGES_ACC_HASH"
+    "EXPO_PUBLIC_CF_IMAGES_ACC_HASH",
+    "EXPO_PUBLIC_UBER_CLIENT_ID"
   ],
   "pipeline": {
     "build": {
