--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -31,6 +31,7 @@
     "expo": "~49.0.8",
     "expo-application": "~5.3.0",
     "expo-auth-session": "^5.0.2",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
