--- a/package.json
+++ b/package.json
@@ -20,42 +20,49 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^4.20230821.0",
+    "@cloudflare/workers-types": "^4.20231121.0",
     "@hono/trpc-server": "^0.1.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@manypkg/cli": "^0.21.0",
-    "@sinclair/typebox": "^0.31.8",
-    "@tanstack/react-query": "^4.33.0",
-    "@trpc/client": "^10.38.1",
-    "@trpc/react-query": "^10.38.1",
-    "@trpc/server": "^10.38.1",
-    "@types/jest": "^29.5.4",
-    "@types/lodash": "^4.14.197",
-    "@types/luxon": "^3.3.2",
-    "@types/node": "^20.5.7",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "@sinclair/typebox": "^0.31.28",
+    "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.18.0",
+    "@trpc/client": "10.44.1",
+    "@trpc/next": "10.44.1",
+    "@trpc/react-query": "10.44.1",
+    "@trpc/server": "10.44.1",
+    "@types/jest": "^29.5.10",
+    "@types/lodash": "^4.14.202",
+    "@types/luxon": "^3.3.5",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "@vibefire/config": "^0.1.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
-    "hono": "^3.5.6",
-    "jest": "^29.6.4",
-    "jotai": "^2.4.1",
+    "autoprefixer": "^10.4.16",
+    "css-to-react-native": "^3.2.0",
+    "eslint": "^8.54.0",
+    "hono": "^3.10.2",
+    "jest": "^29.7.0",
+    "jotai": "^2.6.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.4.2",
-    "next": "^13.4.19",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
+    "luxon": "^3.4.4",
+    "next": "^14.0.3",
+    "postcss": "^8.4.31",
+    "postcss-calc": "^9.0.1",
+    "postcss-color-functional-notation": "^6.0.2",
+    "postcss-css-variables": "^0.19.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
-    "superjson": "^1.13.1",
+    "server@next": "link:trpc/server@next",
+    "superjson": "^2.2.1",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "turbo": "^1.10.13",
-    "type-fest": "^4.3.1",
-    "typescript": "^5.2.2",
-    "wrangler": "^3.6.0"
+    "turbo": "^1.10.16",
+    "type-fest": "^4.8.2",
+    "typescript": "^5.3.2",
+    "wrangler": "^3.17.1"
   }
 }
