--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+apps/handle.vibefire.app/.dev.vars
