add close button and more

--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -5,7 +5,10 @@
     "paths": {
       "~/*": [
         "./src/*"
-      ]
+      ],
+      "#/*": [
+        "./assets/*"
+      ],
     },
     "types": [
       "@types/jest",
