--- a/apps/app.vibefire.native/eas.json
+++ b/apps/app.vibefire.native/eas.json
@@ -1,15 +1,43 @@
 {
     "build": {
+        "base": {
+            "node": "20.9.0",
+            "pnpm": "8.6.11",
+            "env": {
+                "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_YWR2YW5jZWQtYnVmZmFsby02LmNsZXJrLmFjY291bnRzLmRldiQ",
+                "EXPO_PUBLIC_CF_IMAGES_ACC_HASH": "EQ-RiL2Ok8Bm4bYUlkk2qw",
+                "EXPO_PUBLIC_UBER_CLIENT_ID": "XGWYhDe8_R78wx32l9ivfbAcq1QGtMcY",
+            }
+        },
         "development": {
+            "extends": "base",
             "developmentClient": true,
             "distribution": "internal",
+            "env": {
+                "EXPO_PUBLIC_ENVIRONMENT": "development"
+            }
+        },
+        "development-simulator": {
+            "extends": "development",
             "ios": {
                 "simulator": true
+            },
+            "env": {
+                "EXPO_PUBLIC_ENVIRONMENT": "local"
             }
         },
         "preview": {
-            "distribution": "internal"
+            "extends": "base",
+            "distribution": "internal",
+            "env": {
+                "EXPO_PUBLIC_ENVIRONMENT": "preview"
+            }
         },
-        "production": {}
+        "production": {
+            "extends": "base",
+            "env": {
+                "EXPO_PUBLIC_ENVIRONMENT": "production"
+            }
+        }
     }
 }
