--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -8,12 +8,6 @@
     "dev": "expo start",
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
-    "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
-    "type-check": "tsc --noEmit",
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
@@ -34,6 +28,7 @@
     "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
