--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -9,13 +9,16 @@
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
     "update": "pnpm update",
-    "update-latest": "pnpm update --latest"
+    "update-latest": "pnpm update --latest",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.20",
     "@expo-google-fonts/inter": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-navigation/stack": "^6.3.20",
     "@sentry/react-native": "5.10.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@vibefire/api": "^0.1.0",
