--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -46,7 +46,6 @@
     "expo-web-browser": "^12.3.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.1",
@@ -73,6 +72,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "^0.1.0",
+    "babel-preset-expo": "^9.5.2",
     "tailwindcss": "3.3.2"
   }
 }
