--- a/apps/vibefire.app/tsconfig.json
+++ b/apps/vibefire.app/tsconfig.json
@@ -1,16 +1,10 @@
 {
-  "extends": [
-    "@tsconfig/next/tsconfig.json"
-  ],
+  "extends": ["@tsconfig/next/tsconfig.json"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ],
-      "~/public/*": [
-        "public/*"
-      ],
+      "~/*": ["src/*"],
+      "~/public/*": ["public/*"]
     }
   },
   "include": [
