--- a/packages/managers/tsconfig.json
+++ b/packages/managers/tsconfig.json
@@ -1,20 +1,12 @@
 {
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "compilerOptions": {
-    "types": [
-      "@types/jest",
-    ],
+    "types": ["@types/jest"],
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
+      "~/*": ["./src/*"]
     }
   },
-  "include": [
-    "src/**/*.ts",
-  ],
-  "exclude": [
-    "*.test.ts"
-  ],
+  "include": ["src/**/*.ts"],
+  "exclude": ["*.test.ts"]
 }
