--- a/packages/shared-state/tsconfig.json
+++ b/packages/shared-state/tsconfig.json
@@ -3,13 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
-    },
+      "~/*": ["./src/*"]
+    }
   },
-  "include": [
-    "index.ts",
-    "src/**/*.ts"
-  ],
+  "include": ["index.ts", "src/**/*.ts"]
 }
