--- a/apps/api.vibefire.app/package.json
+++ b/apps/api.vibefire.app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "deploy": "wrangler publish",
+    "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
