MASSIVE - added notifications to the app and wrote the notfi service on gcloud funcs

--- a/apps/api.vibefire.app/wrangler.toml
+++ b/apps/api.vibefire.app/wrangler.toml
@@ -5,6 +5,8 @@ workers_dev = false
 
 routes = [{ pattern = "api.vibefire.app", custom_domain = true }]
 
+node_compat = true
+
 # # KV Namespace binding - For more information: https://developers.cloudflare.com/workers/runtime-apis/kv
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
