--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -19,6 +19,7 @@
   "exports": {
     "./context": "./src/managers-context.ts",
     "./fauna": "./src/public/fauna-manager.ts",
+    "./expo": "./src/public/expo-manager.ts",
     "./google-maps": "./src/public/google-maps-manager.ts",
     "./clerk-webhook": "./src/public/clerk-wh-manager.ts"
   }
