--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,11 @@
     "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "EXPO_PUBLIC_CF_IMAGES_ACC_HASH",
     "EXPO_PUBLIC_UBER_CLIENT_ID",
-    "EXPO_PUBLIC_ENVIRONMENT"
+    "EXPO_PUBLIC_ENVIRONMENT",
+    "EXPO_API_ACCESS_TOKEN",
+    "FAUNA_SECRET",
+    "VIBEFIRE_NOTIFICATIONS_SERVICE_ENDPOINT",
+    "VIBEFIRE_NOTIFICATIONS_SERVICE_SECRET"
   ],
   "pipeline": {
     "build": {
