--- a/apps/app.vibefire.native/eas.json
+++ b/apps/app.vibefire.native/eas.json
@@ -1,4 +1,8 @@
 {
+  "cli": {
+    "version": ">= 5.9.1",
+    "requireCommit": false,
+  },
   "build": {
     "base": {
       "node": "20.9.0",
@@ -35,9 +39,18 @@
     },
     "production": {
       "extends": "base",
+      "distribution": "store",
       "env": {
         "EXPO_PUBLIC_ENVIRONMENT": "production"
       }
+    }
+  },
+  "submit": {
+    "production": {
+      "android": {
+        "track": "production"
+      },
+      "ios": {}
     }
   }
 }
