--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "clean": "git clean -xdf .expo .turbo nodeq_modules",
+    "clean": "git clean -xdf .expo .turbo node_modules",
     "dev": "expo start",
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
@@ -39,6 +39,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
     "expo-router": "^2.0.14",
     "expo-secure-store": "^12.3.1",
     "expo-splash-screen": "~0.20.5",
