--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.16",
     "css-to-react-native": "^3.2.0",
     "eslint": "^8.54.0",
+    "expo-server-sdk": "^3.7.0",
     "hono": "^3.10.2",
     "jest": "^29.7.0",
     "jotai": "^2.6.0",
