--- a/services/vibefire-sms-service/package.json
+++ b/services/vibefire-sms-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-notifications-service",
+  "name": "vibefire-sms-service",
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
