--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -61,6 +61,7 @@
     "react-native-svg": "13.9.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.1.7",
+    "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.9",
     "sentry-expo": "~7.1.1"
   },
