--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -11,71 +11,74 @@
     "update": "pnpm update",
     "update-latest": "pnpm update --latest",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.19.20",
+    "@clerk/clerk-expo": "^0.19.30",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/stack": "^6.3.20",
-    "@sentry/react-native": "5.10.0",
+    "@sentry/react-native": "5.17.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@vibefire/api": "^0.1.0",
     "@vibefire/models": "^0.1.0",
     "@vibefire/shared-state": "^0.1.0",
     "@vibefire/utils": "^0.1.0",
-    "expo": "~49.0.21",
-    "expo-application": "~5.3.1",
-    "expo-auth-session": "^5.0.2",
-    "expo-clipboard": "~4.3.1",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-dev-client": "~2.4.12",
-    "expo-device": "~5.4.0",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-location": "~16.1.0",
-    "expo-notifications": "~0.20.1",
-    "expo-router": "^2.0.14",
-    "expo-secure-store": "^12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
-    "expo-web-browser": "^12.3.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "expo": "~50.0.4",
+    "expo-application": "~5.8.3",
+    "expo-auth-session": "^5.4.0",
+    "expo-clipboard": "~5.0.1",
+    "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.0",
+    "expo-dev-client": "~3.3.7",
+    "expo-device": "~5.9.3",
+    "expo-font": "~11.10.2",
+    "expo-image": "~1.10.5",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.2",
+    "expo-notifications": "~0.27.6",
+    "expo-router": "^3.4.6",
+    "expo-secure-store": "^12.8.1",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
+    "expo-web-browser": "^12.8.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-element-dropdown": "^2.10.0",
-    "react-native-gesture-handler": "~2.12.1",
-    "react-native-maps": "1.7.1",
+    "react-native": "0.73.2",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "~2.14.1",
+    "react-native-maps": "1.8.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-redash": "^18.1.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.1",
-    "react-native-svg": "13.9.0",
+    "react-native-redash": "^18.1.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-timeline-flatlist": "^0.8.0",
-    "react-native-toast-message": "^2.1.7",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "^3.8.2",
-    "react-native-web": "~0.19.9",
-    "sentry-expo": "~7.1.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/runtime": "^7.23.4",
-    "@expo/config-plugins": "^7.2.5",
-    "@tsconfig/react-native": "^3.0.2",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/runtime": "^7.23.9",
+    "@expo/config-plugins": "^7.8.4",
+    "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "^0.1.0",
-    "babel-preset-expo": "^9.5.2",
+    "babel-preset-expo": "^10.0.1",
     "tailwindcss": "3.3.2"
   }
 }
